corrects galery overflow

--- a/css/main.css
+++ b/css/main.css
@@ -868,8 +868,6 @@ body {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.02em;
-  padding-top: 5px;
-  padding-bottom: 5px;
   color: var(--text-color);
   transition: color var(--duration) var(--timing-function);
 }
@@ -882,6 +880,20 @@ body {
     line-height: 1.14;
     padding-top: 32px;
     padding-bottom: 32px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .connect__link--mail {
+    padding-top: 20px;
+    padding-bottom: 5px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .connect__link--tel {
+    padding-top: 5px;
+    padding-bottom: 20px;
   }
 }
 
@@ -1236,11 +1248,12 @@ body {
   top: 0;
   left: 0;
   display: flex;
-  align-items: center;
+  overflow-y: scroll;
   height: 100%;
+  padding-top: 24px;
   padding-right: 24px;
   padding-left: 24px;
-  font-size: 14px;
+  font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
   color: var(--second-text-color);
@@ -1250,8 +1263,8 @@ body {
 }
 @media screen and (min-width: 480px) {
   .cover-text {
-    font-size: 18px;
-    line-height: 1.56;
+    align-items: center;
+    padding-top: 0;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
