--- a/sass/layout/layout-partials/_portfolio-galery.scss
+++ b/sass/layout/layout-partials/_portfolio-galery.scss
@@ -44,11 +44,12 @@
   top: 0;
   left: 0;
   display: flex;
-  align-items: center;
+  overflow-y: scroll;
   height: 100%;
+  padding-top: 24px;
   padding-right: 24px;
   padding-left: 24px;
-  font-size: 14px;
+  font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
   color: var(--second-text-color);
@@ -57,8 +58,8 @@
   transition: transform var(--duration) var(--timing-function);
 
   @media screen and (min-width: 480px) {
-    font-size: 18px;
-    line-height: 1.56;
+    align-items: center;
+    padding-top: 0;
   }
 
   @media screen and (min-width: 768px) and (max-width: 1199px) {
